--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body, html {
-height: 100%;
+width: 100%;
 margin: 0;
 }
 
@@ -28,20 +28,32 @@ margin: 0;
 }
 
 div.hero-image {
+	background: rgba(0,0,0, 0.3);
 	background-image: url("img/yam waffles.jpg");
-	height: 90%;
-	background-position: center;
-	background-repeat: no-repeat;
+	height: 100vh;
+	width: 100%;
+	/* margin: -20px; */
+	padding: 40px;
 	background-size: cover;
-	position: relative;
+	background-repeat: no-repeat;
+
+	/* background-position: center;
+	/* position: relative; */
 }
+
+.welcome{
+	color: rgb(50, 206, 36);
+	font-weight: 600;
+	font-size: 3.0rem;
+}
+
 
 div.hero-text {
 	text-align: center;
 	position: absolute;
 	top: 50%;
-	left: 50;
-	transition: translate(-50%, -50%;)
+	left: 50%;
+	transition: translate(-50%, -50%);
 	color: black;
 	}
 
@@ -85,11 +97,12 @@ div.hero-text {
 
 div.hero-image2 {
 	background-image: url("img/yam-pancakes.jpg");
-	height: 90%;
-	background-position: center;
-	background-repeat: no-repeat;
+	height: 100vh;
+	width: 100%;
+	/* margin: -20px; */
+	padding: 40px;
 	background-size: cover;
-	position: relative;
+	background-repeat: no-repeat;
 }
 
 
@@ -108,73 +121,59 @@ footer p {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	}
+.btn{
+	color:fuchsia;
+	 padding: 10px;
+	font-size:1.2rem;
+	border-radius: 10px;
+}
+
+.btn:hover{
+	color: white;
+	background: fuchsia;
+	cursor: pointer;
+}
+.desc{
+font-size: 1.8rem;
+width: 500px;
+color: red
+}
+
+.form-style{
+	border-left: 2px solid black;
+	width: 30%;
+	background: antiquewhite;
+	padding: 20px;
+	border-radius: 15px;
+}
+
+label{
+	font-size: 1.5rem;
+}
+input[type=text],
+input[type=email]
+{
+	padding: 10px;
+	border-radius: 10px;
+	width: 300px;
+	font-size: 1.2rem;
+}
+
+textarea{
+	border-radius: 10px;
+	width: 380px;
+	height: 200px;
+	margin: 5px;
+}
+
+.send{
+	padding: 10px;
+	border-radius: 10px;
+	font-size: 1.2rem;
+	width: 100px;
+}
+
+.send:hover{
+	background: black;
+	color: grey;
+}
