--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ color: red
 
 .form-style{
 	border-left: 2px solid black;
-	width: 30%;
+	width: wap-content;
 	background: antiquewhite;
 	padding: 20px;
 	border-radius: 15px;
